fix: overlay visible

--- a/packages/core/src/tegel-light/components/tl-modal/tl-modal.scss
+++ b/packages/core/src/tegel-light/components/tl-modal/tl-modal.scss
@@ -162,7 +162,7 @@ $modals: (
   }
 }
 
-.tl-modal__backdrop {
+.tl-modal__overlay {
   @include tds-box-sizing;
 
   position: fixed;
@@ -175,7 +175,7 @@ $modals: (
   z-index: 1000;
   display: none;
 
-  .tl-modal--show & {
+  &.tl-modal--show {
     display: block;
   }
 }
